Fix CSS grid overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,6 @@ button {
     padding: 0 8px 0 8px;
 }
 
+.button-size {
+    width: 200px;
+}
